--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>I design webiste for fun.</p>
       </div>
       <div class="skill-row">
-        <img class="skill-2" src="https://www.flaticon.com/svg/vstatic/svg/1342/1342361.svg?token=exp=1610467082~hmac=95d19ad0e0c2e2d8ec0910923fb03f39" alt="">
+        <img class="skill-2" src="https://www.testarchitect.com/images/gallery/cross/test-planning.png" alt="">
         <h3>Web application testing</h3>
         <p>Keen observer, sharp eye, system understaning what else do you need.</p>
       </div>
