--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>I design webiste for fun.</p>
       </div>
       <div class="skill-row">
-        <img class="skill-2" src="https://www.testarchitect.com/images/gallery/cross/test-planning.png" alt="">
+        <img class="skill-2" src="images/test-planning.png" alt="web-testing">
         <h3>Web application testing</h3>
         <p>Keen observer, sharp eye, system understaning what else do you need.</p>
       </div>
