probably fixed the issue

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="skill-1" src="https://www.flaticon.com/svg/vstatic/svg/2463/2463039.svg?token=exp=1610467172~hmac=70295c0211382b350908edfa26d60853" alt="">
+        <img class="skill-1" src="images/coding.png" alt="web-development">
         <h3>Web Development</h3>
         <p>I design webiste for fun.</p>
       </div>
       <div class="skill-row">
-        <img class="skill-2" src="images/test-planning.png" alt="web-testing">
+        <img class="skill-2" src="images/test.png" alt="web-testing">
         <h3>Web application testing</h3>
         <p>Keen observer, sharp eye, system understaning what else do you need.</p>
       </div>
