--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="profile">
       <img class="profile-picture" src="https://pbs.twimg.com/profile_images/1348537560176455685/40M-s44g_400x400.jpg" alt="Akash's Profile Picture">
       <h2>Hello.</h2>
-      <p>I an full time QA Engineer at Cognizant and sometimes I develope web apps for fun.</p>
+      <p>I am full time QA Engineer at Cognizant and sometimes I develop web apps for fun.</p>
     </div>
     <hr>
     <div class="skills">
