made more changes

--- a/index.html
+++ b/index.html
@@ -22,27 +22,32 @@
     <div class="profile">
       <img class="profile-picture" src="https://pbs.twimg.com/profile_images/1348537560176455685/40M-s44g_400x400.jpg" alt="Akash's Profile Picture">
       <h2>Hello.</h2>
-      <p>I am full time QA Engineer at Cognizant and sometimes I develop web apps for fun.</p>
+      <p class>I an full time QA Engineer at Cognizant and sometimes I develope web apps for fun.</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="skill-1" src="images/coding.png" alt="web-development">
-        <h3>Web Development</h3>
-        <p>I design webiste for fun.</p>
+        <h3 class="skill_description_1">Web Development</h3>
+        <p class="skill_description_1">I design webiste for fun.I design webiste for fun.I design webiste for fun.I design webiste for fun.I design webiste for fun.I design webiste for fun.I design webiste for fun.I design webiste for fun.</p>
       </div>
+
       <div class="skill-row">
         <img class="skill-2" src="images/test.png" alt="web-testing">
-        <h3>Web application testing</h3>
-        <p>Keen observer, sharp eye, system understaning what else do you need.</p>
+        <h3 class="skill_description_2">Web application testing</h3>
+        <p class="skill_description_2">I have worked on several different testing projects and gained lots of experience and knowledge about the behhavior of the sytem.</p>
+        <p><span class="about-me">About me</span>- Keen observer, sharp eye, system understaning what else do you need.</p>
       </div>
     </div>
+    <br>
     <hr>
+
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Give your views</h3>
-      <p>Open to critism.</p>
+      <p>Open to critism. Nothings makes a person better when he knows where his faults are.</p>
+      <p>You and I can make this website wonderful.</p>
       <a class="btn" href="mailto:akashsidhue@email.com">CONTACT ME</a>
     </div>
   </div>
@@ -53,7 +58,7 @@
     <a class="footer-link" href="https://www.linkedin.com/in/akash-sidhue-084485109/">LinkedIn</a>
     <a class="footer-link" href="https://www.facebook.com/akashssr/">Facebook</a>
 
-    <p>© 2021 Akash Sidhue @ Cognizant</p>
+    <p class="credits">© 2021 Akash Sidhue @ Cognizant</p>
   </div>
 
 
