added cogniZant link

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
     <a class="footer-link" href="https://www.linkedin.com/in/akash-sidhue-084485109/">LinkedIn</a>
     <a class="footer-link" href="https://www.facebook.com/akashssr/">Facebook</a>
+    <a class="footer-link" href="https://www.cognizant.com/">Website</a>
 
     <p class="credits">© 2021 Akash Sidhue @ Cognizant</p>
   </div>
