--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="profile">
       <img class="profile-picture" src="https://pbs.twimg.com/profile_images/1348537560176455685/40M-s44g_400x400.jpg" alt="Akash's Profile Picture">
       <h2>Hello.</h2>
-      <p class>I an full time QA Engineer at Cognizant and sometimes I develope web apps for fun.</p>
+      <p class="my-bio">I an full time QA Engineer at Cognizant and sometimes I develope web apps for fun.</p>
     </div>
     <hr>
     <div class="skills">
@@ -30,14 +30,14 @@
       <div class="skill-row">
         <img class="skill-1" src="images/coding.png" alt="web-development">
         <h3 class="skill_description_1">Web Development</h3>
-        <p class="skill_description_1">I design webiste for fun.I design webiste for fun.I design webiste for fun.I design webiste for fun.I design webiste for fun.I design webiste for fun.I design webiste for fun.I design webiste for fun.</p>
+        <p class="skill_description_1">I design website for fun. Though sometimes </p>
       </div>
 
       <div class="skill-row">
         <img class="skill-2" src="images/test.png" alt="web-testing">
         <h3 class="skill_description_2">Web application testing</h3>
         <p class="skill_description_2">I have worked on several different testing projects and gained lots of experience and knowledge about the behhavior of the sytem.</p>
-        <p><span class="about-me">About me</span>- Keen observer, sharp eye, system understaning what else do you need.</p>
+        <p><span class="about-me">About me</span>- Keen observer, sharp eye, system understaning.</p>
       </div>
     </div>
     <br>
