--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="skill-row">
         <img class="skill-1" src="images/coding.png" alt="web-development">
         <h3 class="skill_description_1">Web Development</h3>
-        <p class="skill_description_1">I design website for fun. Though sometimes </p>
+        <p class="skill_description_1">I design website for fun. Did it for fun, now I do it for my profession. Imaginative, always looking for new things to make my website even better.</p>
       </div>
 
       <div class="skill-row">
